Added Cors policy

--- a/OrtBackEnd/appsettings.json
+++ b/OrtBackEnd/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "fe49a7dc7d9c1ccb83c89b887ad311de"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Testdb": "Host=localhost;Port=5405;Database=Questions_DB;Username=postgres;Password=Ismail1809!"
