--- a/OrtBackEnd/appsettings.json
+++ b/OrtBackEnd/appsettings.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Testdb": "Host=localhost;Port=5405;Database=Questions_DB;Username=postgres;Password=Ismail1809!"
+    "Testdb": "Host=localhost;Port=5432;Database=ArturDB;Username=postgres;Password=danger123" // Username=postgres;Password=Ismail1809!
   }
 }
