--- a/OrtBackEnd/nlog.config
+++ b/OrtBackEnd/nlog.config
@@ -3,10 +3,10 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="C:\aspnetcore\OrtBackEnd\OrtBackEnd\innerlog.txt">
+      internalLogFile="..\innerlog.txt">
 	<targets>
 		<target name="logfile" xsi:type="File"
-				fileName="C:\aspnetcore\OrtBackEnd\OrtBackEnd\innerlog.txt"
+				fileName="..\innerlog.txt"
 				layout="${longdate} ${level:uppercase=true} ${message}"/>
 	</targets>
 	<rules>
